--- a/character.html
+++ b/character.html
@@ -26,7 +26,7 @@
         <a id="fox">
             <div class="CharacterCard">
                 <div class="card">
-                    <img src="Images/Character%20page/Fox.png" width="65%" , height="100%" />
+                    <img src="Images/Character page/Fox.png" width="65%" , height="100%" />
                     <div class="content">
                         <h2>The Fox</h2>
                         <p>
