--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </style>
     </head>
     <body>
+        
         <div id="snow-container">
             <div class="background">
                 <img src="Images/home%20page/home%20page%20photos/background.png" width="100%" height="150%" />
@@ -37,9 +38,9 @@
             <div id="sun">
                 <img src="Images/home%20page/home%20page%20photos/sun.png" width="100%" height="100%" />
             </div>
-            <div class="Snow">
+            <!--<div class="Snow">
                 <img src="Images/home%20page/story%20images/snowflake.png" width="100%" height="100%" />
-            </div>
+            </div> --->
         </div>
 
         <div id="story1">
